--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,33 @@
 /*  your css code here. If applicable */
+.container {
+        background-color: rgb(206, 204, 204);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 500px;
+        height: 200px;
+        border: 5px solid black;
+        border-radius: 50px;
+      }
+
+      .red {
+        background-color: red;
+        height: 100px;
+        border-radius: 50%;
+        width: 100px;
+        margin: 5px;
+      }
+      .green {
+        margin: 5px;
+        background-color: green;
+        border-radius: 50%;
+        width: 100px;
+        height: 100px;
+      }
+      .yellow {
+        margin: 5px;
+        height: 100px;
+        width: 100px;
+        border-radius: 50%;
+        background-color: yellow;
+      }
